--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,8 @@ html{
 	background-position: center;
 }
 .banner img{
-    width: 70%;
+    width: 80%;
+    height: 80%;
     margin-left: 10%;
 }
 .banner{
@@ -19,13 +20,29 @@ html{
 header{
     display: flex;
     justify-content: space-between;
-    margin-right: 5%;
+}
+a{
+    color: black;
+    padding: 10px;
+    display: block;
 }
 ul li{
     display: inline-block;
+    list-style: none;
 }
 ul{
     padding: 0;
+}
+ul a:link, ul a:visited{
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+ul a:hover{
+    background-color: rgba(129, 129, 129, 0.5);
+}
+nav{
+    width: 30%;
+    padding-top: 30px;
 }
 main{
     background-color: rgba(255, 255, 255, 0.5);
@@ -40,4 +57,48 @@ footer{
     padding-left: 2%;
     padding: 5px;
     margin-top: 15px;
+}
+
+@media screen and (max-width: 480px) {
+    ul li{
+        display: inline-block;
+        list-style: none;
+        margin: 15px;
+    }
+    .banner img{
+        width: 90%;
+        height: 20%;
+        margin-left: 10%;
+    }
+}
+@media screen and (max-width: 697px) and (min-width: 480px) {
+    ul li{
+        display: inline-block;
+        list-style: none;
+        margin: 15px;
+    }
+    .banner img{
+        width: 90%;
+        height: 30%;
+        margin-left: 10%;
+    }
+}
+@media screen and (max-width: 710px) and (min-width: 697px) {
+    ul li{
+        display: inline-block;
+        list-style: none;
+        margin: 15px;
+    }
+    .banner img{
+        width: 80%;
+        height: 60%;
+        margin-left: 10%;
+    }
+}
+@media screen and (max-width: 930px) and (min-width: 710px){
+    .banner img{
+        width: 80%;
+        height: 80%;
+        margin-left: 10%;
+    }
 }
