--- a/style/style.css
+++ b/style/style.css
@@ -10,8 +10,8 @@ html{
 	background-position: center;
 }
 .banner img{
-    width: 80%;
-    height: 80%;
+    max-width: 100%;
+    height: auto;
     margin-left: 10%;
 }
 p{
@@ -75,8 +75,8 @@ footer{
         margin: 15px;
     }
     .banner img{
-        width: 90%;
-        height: 20%;
+        width: 100%;
+        height: auto;
         margin-left: 10%;
     }
 }
@@ -88,7 +88,7 @@ footer{
     }
     .banner img{
         width: 90%;
-        height: 30%;
+        height: auto;
         margin-left: 10%;
     }
 }
@@ -99,15 +99,15 @@ footer{
         margin: 15px;
     }
     .banner img{
-        width: 80%;
-        height: 60%;
+        width: 90%;
+        height: auto;
         margin-left: 10%;
     }
 }
 @media screen and (max-width: 930px) and (min-width: 710px){
     .banner img{
-        width: 80%;
-        height: 80%;
+        width: 90%;
+        height: auto;
         margin-left: 10%;
     }
 }
