--- a/style/style.css
+++ b/style/style.css
@@ -21,14 +21,9 @@ p{
 .banner{
     width: 30%;
 }
-header{
-    display: flex;
-    justify-content: space-between;
-}
 a{
     color: black;
     padding: 10px;
-    display: block;
 }
 ul li{
     display: inline-block;
@@ -79,6 +74,12 @@ footer{
         height: auto;
         margin-left: 10%;
     }
+    header{
+        justify-content: space-between;
+    }
+    nav{
+        width: 100%;
+    }
 }
 @media screen and (max-width: 697px) and (min-width: 480px) {
     ul li{
@@ -90,6 +91,12 @@ footer{
         width: 90%;
         height: auto;
         margin-left: 10%;
+    }
+    header{
+        justify-content: space-between;
+    }
+    nav{
+        width: 100%;
     }
 }
 @media screen and (max-width: 710px) and (min-width: 697px) {
@@ -103,11 +110,32 @@ footer{
         height: auto;
         margin-left: 10%;
     }
+    header{
+        justify-content: space-between;
+    }
+    nav{
+        width: 100%;
+    }
 }
 @media screen and (max-width: 930px) and (min-width: 710px){
     .banner img{
-        width: 90%;
+        width: 80%;
         height: auto;
         margin-left: 10%;
+    }
+    header{
+        display: flex;
+        justify-content: space-between;
+    }
+}
+@media screen and (min-width: 930px){
+    .banner img{
+        width: 200px;
+        height: auto;
+        margin-left: 10%;
+    }
+    header{
+        display: flex;
+        justify-content: space-between;
     }
 }
