--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@
     list-style-type: none;
 }
 html{
-    background-image:url("../zdj/tlo4.jpg");
+    background-image:url("../zdj/tlo2.avif");
     background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
